Added photo upload and sticker upload feature

--- a/app/index.html
+++ b/app/index.html
@@ -35,18 +35,23 @@
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
-        <h3 class="text-muted">photo sticker app</h3>
+        <h3 class="text-muted">Photo Sticker App</h3>
       </div>
       <div class="row">
         <div class="col-md-10">
-          <div class="">
-            <h1>Please choose your photo</h1>
-            <input type="file" id="photo-upload" >
+          <div class="main-container">
+            <h3>Please choose your photo</h3>
+            <input type="file" id="photo-upload" accept="image/*">
             <div id="canvas-area">
             </div>
           </div>
         </div>
-        <div class="col-md-2">Sticker Area</div>
+        <div class="col-md-2">
+          <h3>Sticker Area</h3>
+          <input type="file" id="sticker-upload" accept="image/*">
+          <div id="sticker-area">
+          </div>
+        </div>
       </div>
 
       <div class="footer">
