--- a/app/index.html
+++ b/app/index.html
@@ -30,11 +30,6 @@
     
     <div class="container-fluid">
       <div class="header">
-        <ul class="nav nav-pills pull-right">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
         <h3 class="text-muted">Photo Sticker App</h3>
       </div>
       <div class="row">
@@ -48,7 +43,7 @@
         </div>
         <div class="col-md-2">
           <h3>Sticker Area</h3>
-          <input type="file" id="sticker-upload" accept="image/*">
+          <button id="add-sticker" class="btn btn-info">Add Sticker</button>
           <div id="sticker-area">
           </div>
         </div>
@@ -59,6 +54,28 @@
       </div>
     </div>
     
+    <div id="sticker-modal" class="sticker-modal">
+      <div class="modal-body">
+        <form id="sticker-form" class="form-horizontal">
+          <div class="form-group">
+              <div class="col-sm-12">
+                  <input type="text" id="sticker-input" placeholder="Please enter name for sticker" required />
+              </div>
+          </div>
+          <div class="form-group">
+              <div class="col-sm-12">
+                  <input type="file" id="sticker-upload" accept="image/*" required />
+              </div>
+          </div>
+          <div class="form-group">
+              <div class="col-sm-10">
+                  <button type="submit" class="btn btn-success">Add Sticker to Library</button>
+              </div>
+          </div>
+        </form>
+
+      </div>
+    </div>
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
