Fixed a bug in adding sticker images

--- a/app/index.html
+++ b/app/index.html
@@ -77,6 +77,12 @@
       </div>
     </div>
 
+    <div id="sticker-template" class="sticker-template">
+      <div class="sticker">
+        {{stickerImg}}
+        <span class="title">{{title}}</span>
+      </div>
+    </div>
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <!-- endbower -->
