Drag and drop raw implementation

--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,7 @@
           <div class="main-container">
             <h3>Please choose your photo</h3>
             <input type="file" id="photo-upload" accept="image/*">
-            <div id="canvas-area">
+            <div id="canvas-area" ondragover="event.preventDefault();" class="canvas-area">
             </div>
           </div>
         </div>
