Deleting sticker. Repositioning sticker after dropped features

--- a/app/index.html
+++ b/app/index.html
@@ -81,6 +81,7 @@
       <div class="sticker">
         {{stickerImg}}
         <span class="title">{{title}}</span>
+        <span class="glyphicon glyphicon-remove sticker-remove" aria-hidden="true"></span>
       </div>
     </div>
     <!-- build:js(.) scripts/vendor.js -->
