--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,8 @@
         <div class="col-md-10">
           <div class="main-container">
             <h3>Please choose your photo</h3>
-            <a href="javascript:void(0)" id="choose-photo-link">Choose Photo</a>
+            <button id="start-over" class="btn btn-danger start-over" disabled="true">Start Over</button>
+            <button id="choose-photo-link" class="btn btn-success">Choose Photo</button>
             <input type="file" id="photo-upload" class="photo-upload" accept="image/*">
             <div id="canvas-area" ondragover="event.preventDefault();" class="canvas-area">
             </div>
@@ -60,13 +61,15 @@
         <form id="sticker-form" class="form-horizontal">
           <div class="form-group">
               <div class="col-sm-12">
-                  <input type="text" id="sticker-input" placeholder="Please enter name for sticker" required />
+                  <input type="text" id="sticker-input" placeholder="Please enter name for sticker"  />
+                  <span class="text-danger error-name" id="error-name">Please give a name for the sticker</span>
               </div>
           </div>
           <div class="form-group">
               <div class="col-sm-12">
                   <a href="javascript:void(0)" id="choose-sticker-link">Select image</a>
-                  <input type="file" id="sticker-upload" class="sticker-upload" accept="image/*" required />
+                  <input type="file" id="sticker-upload" class="sticker-upload" accept="image/*"  />
+                  <span class="text-danger error-file" id="error-file">Please attach an image</span>
               </div>
           </div>
           <div class="form-group">
