Added warning for local storage limits

--- a/app/index.html
+++ b/app/index.html
@@ -69,6 +69,7 @@
               <div class="col-sm-12">
                   <a href="javascript:void(0)" id="choose-sticker-link">Select image</a>
                   <input type="file" id="sticker-upload" class="sticker-upload" accept="image/*"  />
+                  <span class="text-primary sticker-name-cont" id="sticker-name-cont"><b>Selected File name: </b><span id="selected-sticker-name"></span></span>
                   <span class="text-danger error-file" id="error-file">Please attach an image</span>
               </div>
           </div>
