--- a/app/index.html
+++ b/app/index.html
@@ -106,7 +106,8 @@
     
 
     <!-- build:js scripts/main.js -->
-    <script src="scripts/main.js"></script>
+    <script src="scripts/photo-app.js"></script>
+    <script src="scripts/dom-helper.js"></script>
     <script src="scripts/interactions.js"></script>
     <!-- endbuild -->
 
