Code reoriganization. Added helper functions

--- a/app/index.html
+++ b/app/index.html
@@ -97,7 +97,7 @@
       <img data-photo-id={{id}} class="main-image" src={{srcString}} />
     </div>
     <div id="photo-sticker-template" class="photo-sticker-template">
-      <img src={{srcString}} data-id={{stickerId}} class="dropped-sticker" style="left:{{left}};top:{{top}}" />
+      <img src={{srcString}} data-id={{stickerId}} class="dropped-sticker" style="left:{{left}};top:{{top}};z-index:{{zIndex}}" />
     </div>
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
