--- a/app/index.html
+++ b/app/index.html
@@ -2,12 +2,14 @@
 <html class="no-js" lang="">
   <head>
     <meta charset="utf-8">
-    <title>photo sticker app</title>
+    <title>Photo Sticker App</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600" rel="stylesheet" type="text/css">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <!-- build:css(.) styles/vendor.css -->
@@ -30,73 +32,85 @@
     
     <div class="container-fluid">
       <div class="header">
-        <h3 class="text-muted">Photo Sticker App</h3>
+        <h3>Photo Sticker App</h3>
       </div>
-      <div class="row">
+      <div class="row clearfix">
         <div class="col-md-10">
           <div class="main-container">
-            <h3>Please choose your photo</h3>
-            <button id="start-over" class="btn btn-danger start-over" disabled="true">Start Over</button>
-            <button id="choose-photo-link" class="btn btn-success">Choose Photo</button>
-            <input type="file" id="photo-upload" class="photo-upload" accept="image/*">
-            <div id="canvas-area" ondragover="event.preventDefault();" class="canvas-area">
+            <div class="photo-controls-container">
+              <h5>Please choose your photo to start adding stickers</h5>
+              <button id="start-over" class="btn btn-danger start-over" disabled="true">Start Over</button>
+              <button id="choose-photo-link" class="btn btn-success">Choose Photo</button>
+              <input type="file" id="photo-upload" class="photo-upload hide" accept="image/*">
+            </div>
+            <div class="img-container">
+              <div id="canvas-area" ondragover="event.preventDefault();" class="canvas-area">
+            </div>
             </div>
           </div>
         </div>
-        <div class="col-md-2">
-          <h3>Sticker Area</h3>
-          <button id="add-sticker" class="btn btn-info">Add Sticker</button>
-          <div id="sticker-area">
+        <div class="col-md-2 sticker-lib">
+          <h3>Sticker Library</h3>
+          <hr />
+          <button id="add-sticker" class="btn btn-primary"><span class="glyphicon glyphicon-plus"></span>&nbsp;Add Sticker</button>
+          <div id="sticker-area" class="sticker-area">
           </div>
         </div>
       </div>
 
       <div class="footer">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <p><span class="glyphicon glyphicon-thumbs-up"></span> No copyright :) Feel free to add/edit</p>
       </div>
     </div>
     
     <div id="sticker-modal" class="sticker-modal">
-      <div class="modal-body">
-        <form id="sticker-form" class="form-horizontal">
-          <div class="form-group">
-              <div class="col-sm-12">
-                  <input type="text" id="sticker-input" placeholder="Please enter name for sticker"  />
-                  <span class="text-danger error-name" id="error-name">Please give a name for the sticker</span>
-              </div>
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h4 class="modal-title">Add Sticker to Library</h4>
           </div>
-          <div class="form-group">
-              <div class="col-sm-12">
-                  <a href="javascript:void(0)" id="choose-sticker-link">Select image</a>
-                  <input type="file" id="sticker-upload" class="sticker-upload" accept="image/*"  />
-                  <span class="text-primary sticker-name-cont" id="sticker-name-cont"><b>Selected File name: </b><span id="selected-sticker-name"></span></span>
-                  <span class="text-danger error-file" id="error-file">Please attach an image</span>
+          <div class="modal-body">
+            <form id="sticker-form" class="form-horizontal">
+              <div class="form-group">
+                  <div class="col-sm-12">
+                      <input type="text" id="sticker-input" class="form-control form-name sticker-input" placeholder="Please enter name for sticker"  />
+                      <span class="text-danger error-name" id="error-name">Please give a name for the sticker</span>
+                  </div>
               </div>
-          </div>
-          <div class="form-group">
-              <div class="col-sm-10">
-                  <button type="submit" class="btn btn-success">Add Sticker to Library</button>
+              <div class="form-group">
+                  <div class="col-sm-12">
+                      <a href="javascript:void(0)" id="choose-sticker-link" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>&nbsp;Select image</a>
+                      <input type="file" id="sticker-upload" class="sticker-upload hide" accept="image/*"  />
+                      <span class="text-primary sticker-name-cont" id="sticker-name-cont"><b>Selected File name: </b><span id="selected-sticker-name"></span></span>
+                      <span class="text-danger error-file" id="error-file">Please attach an image</span>
+                  </div>
               </div>
-          </div>
-        </form>
+              <div class="form-group">
+                  <div class="col-sm-10">
+                      <button type="submit" id="sticker-sumbit" class="btn btn-success" disabled="true">Add Sticker to Library</button>
+                  </div>
+              </div>
+            </form>
 
+          </div>
+        </div>
       </div>
     </div>
 
-    <div id="sticker-template" class="sticker-template">
+    <div id="sticker-template" class="sticker-template hide">
       <div class="sticker">
         {{stickerImg}}
         <span class="title">{{title}}</span>
         <span class="glyphicon glyphicon-remove sticker-remove" aria-hidden="true"></span>
       </div>
     </div>
-    <div id='sticker-img-template' class="sticker-img-template">
+    <div id='sticker-img-template' class="sticker-img-template hide">
       <img src={{srcString}} data-sticker-id={{id}} draggable="true" class="sticker-img" />
     </div>
-    <div id="main-image-template" class="main-image-template">
+    <div id="main-image-template" class="main-image-template hide">
       <img data-photo-id={{id}} class="main-image" src={{srcString}} />
     </div>
-    <div id="photo-sticker-template" class="photo-sticker-template">
+    <div id="photo-sticker-template" class="photo-sticker-template hide">
       <img src={{srcString}} data-id={{stickerId}} class="dropped-sticker" style="left:{{left}};top:{{top}};z-index:{{zIndex}}" />
     </div>
     <!-- build:js(.) scripts/vendor.js -->
