Changed button text

--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,7 @@
             <div class="photo-controls-container">
               <h5>Please choose your photo to start adding stickers</h5>
               <button id="start-over" class="btn btn-danger start-over" disabled="true">Start Over</button>
-              <button id="choose-photo-link" class="btn btn-success">Choose Photo</button>
+              <button id="choose-photo-link" class="btn btn-success"><span class="glyphicon glyphicon-search"></span>&nbsp;Upload Photo</button>
               <input type="file" id="photo-upload" class="photo-upload hide" accept="image/*">
             </div>
             <div class="img-container">
@@ -52,7 +52,7 @@
         <div class="col-md-2 sticker-lib">
           <h3>Sticker Library</h3>
           <hr />
-          <button id="add-sticker" class="btn btn-primary"><span class="glyphicon glyphicon-plus"></span>&nbsp;Add Sticker</button>
+          <button id="add-sticker" class="btn btn-primary"><span class="glyphicon glyphicon-plus"></span>&nbsp;Upload New Sticker</button>
           <div id="sticker-area" class="sticker-area">
           </div>
         </div>
