Save photo template

--- a/app/index.html
+++ b/app/index.html
@@ -42,6 +42,7 @@
               <button id="start-over" class="btn btn-danger start-over" disabled="true">Start Over</button>
               <button id="choose-photo-link" class="btn btn-success"><span class="glyphicon glyphicon-search"></span>&nbsp;Upload Photo</button>
               <input type="file" id="photo-upload" class="photo-upload hide" accept="image/*">
+              <button id="save-photo" class="btn btn-primary"><span class="glyphicon glyphicon-save"></span>&nbsp;Save Photo</button>
             </div>
             <!-- Main Image Container -->
             <div class="img-container">
